
$Id$

2009-09-16 Karl Lehenbauer
    * Add gen_update_from_array and perform_update_from_array to Postgres
      helper package.

2009-07-07 Karl Lehenbauer
    * pg_select was not checking returns from Tcl_ObjSetVar2 and friends.
      The problem was that if the pg_select array already existed as a
      scalar variable, no error was returned to denote this, and it caused 
      a coredump in Tcl 8.5.  This has now been fixed.

    * In pg_select code, correct memory allocation for columnNameObjs to
      use the size of a pointer to Tcl_Obj times the number of columns,
      rather than the size of a Tcl_Obj times the number of columns..

2009-06-30 Karl Lehenbauer
    * Fixed bug in "pgresult -assign" that could cuase a Tcl panic by 
      attempting to set a value into a shared Tcl object.

    * libpq's PQfname can return NULL if the column requested is out of 
      range.  We have seen it return NULL when the column is in range,
      so instead of dumping core, we treat such a return as a Tcl error.

2009-04-06 Karl Lehenbauer
    * Pgtcl 1.7 released.

2009-02-26 Karl Lehenbauer
    * Make PostgreSQL helpers "res_dont_care" and "res_must_succeed"
      accept PGRES_TUPLES_OK as a sucessful result as well as
      PGRES_COMMAND_OK.

2008-05-24 Karl Lehenbauer
    * Add new pg_result suboption -tupleArrayWithoutNulls.  It works like
      -tupleArray except if a field is null, it unsets the field from
      the array.

2008-05-23 Karl Lehenbauer
    * Add "escape_bytea" and "unescape_bytea" to the methods that can be
      invoked from $conn.

    * Extend pg_escape_bytea to allow a connection handle to be specified.
      If specified, libpq's PQescapeByteaConn is used rather than
      deprecated PQescapeBytea, which can return incorrect results since
      it can't determine whether standard-conforming strings are enabled.

      If the "$conn escape_bytea ..." method is used, the connection-handle
      version is automatically used.
